src/objects/ACED_Program_Indication__c.object
<CustomObject>
    <fields>
        <fullName>Data_Load_Id__c</fullName>
        <label>Data Load Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effort__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>This is a helptext for Effort</inlineHelpText>
        <label>Effort</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Indication__c</fullName>
        <inlineHelpText>This is a helptext for Indication</inlineHelpText>
        <label>Indication</label>
        <referenceTo>ACED_Brand_Indications__c</referenceTo>
        <relationshipLabel>Brand Indications</relationshipLabel>
        <relationshipName>Program_Products</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <inlineHelpText>This is a helptext for Program</inlineHelpText>
        <label>Program</label>
        <referenceTo>ACED_Programs__c</referenceTo>
        <relationshipLabel>Brand Indications</relationshipLabel>
        <relationshipName>Program_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Unique_Program_Brand_Indication_Value__c</fullName>
        <description>Foramat:Program Id+&apos;-&apos;+Brand Indication Id</description>
        <externalId>true</externalId>
        <label>Unique Program Brand Indication Value</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Brand Indication</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Indication ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Brand Indications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EffortPositiveValues</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Effort__c &lt;0 ,Effort__c &gt;1)</errorConditionFormula>
        <errorDisplayField>Effort__c</errorDisplayField>
        <errorMessage>Effort value should always be between 0 to 100%</errorMessage>
    </validationRules>
</CustomObject>